--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<h1>My id {{ myid }}</h1>
+<input type="text" [(ngModel)]="anotherid" />
+<button type="button" class="btn btn-info" (click)="connect()">Connect</button>
