Add some buttons

--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -4,3 +4,8 @@
 <br>
 <textarea [(ngModel)]="message"></textarea>
 <button type="button" class="btn btn-success" (click)="sendMessage()">Send</button>
+<br>
+<button type="button" class="btn btn-success" (click)="getAllPeerIds()">Print All Ids</button>
+<br>
+<br>
+<button type="button" class="btn btn-success" (click)="getAllPeersIAmConnectedTo()">Print Ids I'm connected to</button>
