Clean up, fix bugs and allow retrieving old messages

--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -9,3 +9,6 @@
 <br>
 <br>
 <button type="button" class="btn btn-success" (click)="getAllPeerIdsIAmConnectedTo()">Print Ids I'm connected to</button>
+<br>
+<br>
+<button type="button" class="btn btn-success" (click)="getPreviousMessages()">Print previous Messages</button>
