Move peer related methods to service file

--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>My id {{ peer.id }}</h1>
+<h1>My id {{ myPeerId }}</h1>
 <input type="text" [(ngModel)]="peerConnectToId" />
 <button type="button" class="btn btn-info" (click)="connect()">Connect</button>
 <br>
