--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <input type="text" [(ngModel)]="peerConnectToId" />
 <button type="button" class="btn btn-info" (click)="connect()">Connect</button>
 <br>
-<textarea [(ngModel)]="message"></textarea>
+<textarea [(ngModel)]="messageToSend"></textarea>
 <button type="button" class="btn btn-success" (click)="sendMessage()">Send</button>
 <br>
 <button type="button" class="btn btn-success" (click)="getAllPeerIds()">Print All Ids</button>
@@ -12,3 +12,10 @@
 <br>
 <br>
 <button type="button" class="btn btn-success" (click)="getPreviousMessages()">Print previous Messages</button>
+
+<div class="container-fluid mt-2">
+  <div *ngFor="let mess of messages">
+    <app-message-bubble [senderName]="mess.peerId" [content]="mess.messages[0]">
+    </app-message-bubble>
+  </div>
+</div>
