Fix to render messages for sender too

--- a/rapid-chat-client/src/app/message-bubble/message-bubble.component.html
+++ b/rapid-chat-client/src/app/message-bubble/message-bubble.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-start">
   <div class="card mb-3">
-    <div class="card-body bot-card-body">
+    <div class="card-body">
       <h5 class="card-title">{{ senderName }}</h5>
       <p class="card-text">{{ content }}</p>
     </div>
