Fix toggle nav bar

--- a/rapid-chat-client/src/app/message-bubble/message-bubble.component.css
+++ b/rapid-chat-client/src/app/message-bubble/message-bubble.component.css
@@ -14,3 +14,13 @@
 .card-text {
     margin: 0px;
 }
+
+html {
+  font-size: 14px;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
