--- a/rapid-chat-client/src/app/header/header.component.html
+++ b/rapid-chat-client/src/app/header/header.component.html
@@ -8,11 +8,8 @@
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+          <li class="nav-item" [routerLink]='["/"]' [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
             <a class="nav-link text-dark" (click)="onBtnHomeClick()">Home</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" (click)="onBtnAboutClick()">About</a>
           </li>
         </ul>
       </div>
