--- a/rapid-chat-client/src/app/message-bubble/message-bubble.component.css
+++ b/rapid-chat-client/src/app/message-bubble/message-bubble.component.css
@@ -28,3 +28,14 @@ html {
     font-size: 16px;
   }
 }
+
+.name {
+    margin: 0 20px 0 20px;
+    margin-bottom: 1px;
+    font-weight: bold;
+    color: #565656;
+}
+
+.card {
+    margin: 0 20px 0 20px;
+}
