--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -1,17 +1,22 @@
-<div class="container-fluid mt-2">
-  <div *ngFor="let mess of messages">
-    <app-message-bubble [senderName]="mess.fromPeerId" [content]="mess.content">
-    </app-message-bubble>
+<div role="main" class="cover">
+  <div class="container text-center">
+    <h1 class="display-3">Create groups and Chat!</h1>
+    <p>
+      Create groups and chat with friends now! No account needed! 100% privacy!
+    </p>
+    <div class="d-flex flex-column flex-md-row justify-content-center mt-5">
+      <a class="btn btn-lg mr-md-3 btn-orange" role="button" routerLink="/chat"
+        >Create New Group &raquo;</a
+      >
+    </div>
   </div>
 </div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div class="container">
-  <form class="form-container fixed-bottom mx-3" [formGroup]="messageForm" (ngSubmit)="sendMessage(messageForm.value)">
-    <div class="form-group">
-      <input type="text" formControlName="messageToSend" class="form-control" placeholder="Aa" autofocus>
-    </div>
-  </form>
-</div>
 
+<footer class="footer">
+  <div class="container">
+    <p class="text-center">
+      An open source project by
+      <a href="https://github.com/DinamoTeam" target="_blank">Dinamo Team</a>
+    </p>
+  </div>
+</footer>
