Add button to share link

--- a/rapid-chat-client/src/app/home/home.component.html
+++ b/rapid-chat-client/src/app/home/home.component.html
@@ -5,8 +5,7 @@
       Create groups and chat with friends now! No account needed! 100% privacy!
     </p>
     <div class="d-flex flex-column flex-md-row justify-content-center mt-5">
-      <a class="btn btn-lg mr-md-3 btn-orange" role="button" routerLink="/chat"
-        >Create New Group &raquo;</a
+      <a class="btn btn-lg mr-md-3 btn-orange" role="button" routerLink="/chat">Create New Group &raquo;</a
       >
     </div>
   </div>
