--- a/rapid-chat-client/src/app/header/header.component.html
+++ b/rapid-chat-client/src/app/header/header.component.html
@@ -7,11 +7,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLink]='["/"]' [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-            <a class="nav-link text-dark" (click)="onBtnHomeClick()">Home</a>
-          </li>
-        </ul>
+        <div class="navbar-nav flex-grow">
+          <a class="nav-item text-dark" role="button" (click)="onBtnHomeClick()">Invite</a>
+        </div>
       </div>
     </div>
   </nav>
