--- a/rapid-chat-client/src/app/chat/chat.component.html
+++ b/rapid-chat-client/src/app/chat/chat.component.html
@@ -9,18 +9,17 @@
 <div>&nbsp;</div>
 <div class="container">
   <form
-    class="form-container fixed-bottom mx-3"
+    class="form-container fixed-bottom ml-3 mr-2"
     [formGroup]="messageForm"
     (ngSubmit)="sendMessage(messageForm.value)"
   >
-    <div class="form-group">
-      <input
-        type="text"
-        formControlName="messageToSend"
-        class="form-control"
-        placeholder="Aa"
-        autofocus
-      />
+    <div class="form-group d-flex">
+      <input type="text"
+             formControlName="messageToSend"
+             class="form-control"
+             placeholder="Aa"
+             autofocus />
+      <button class="invisibleBtn" type="submit"><img class="ml-1" src="../../assets/send-mail.svg" /></button>
     </div>
   </form>
 </div>
