--- a/rapid-chat-client/src/app/chat/chat.component.html
+++ b/rapid-chat-client/src/app/chat/chat.component.html
@@ -14,12 +14,20 @@
     (ngSubmit)="sendMessage(messageForm.value)"
   >
     <div class="form-group d-flex">
-      <input type="text"
-             formControlName="messageToSend"
-             class="form-control"
-             placeholder="Aa"
-             autofocus />
-      <button class="invisibleBtn" type="submit"><img class="ml-1" src="../../assets/send-mail.svg" /></button>
+      <input
+        type="text"
+        formControlName="messageToSend"
+        class="form-control"
+        placeholder="Aa"
+        autofocus
+      />
+      <button
+        *ngIf="messageToSend.value != ''"
+        class="invisibleBtn"
+        type="submit"
+      >
+        <img class="ml-1" src="../../assets/send-mail.svg" />
+      </button>
     </div>
   </form>
 </div>
