--- a/rapid-chat-client/src/app/message-bubble/message-bubble.component.html
+++ b/rapid-chat-client/src/app/message-bubble/message-bubble.component.html
@@ -1,7 +1,19 @@
-<div [ngClass]="{ 'justify-content-end': senderName == myPeerId }" class="d-flex">
-  <div [ngClass]="{ 'align-items-end': senderName == myPeerId }" class="d-flex flex-column">
+<div
+  [ngClass]="{ 'justify-content-end': senderName == myPeerId }"
+  class="d-flex"
+>
+  <div
+    [ngClass]="{ 'align-items-end': senderName == myPeerId }"
+    class="d-flex flex-column"
+  >
     <p class="name">{{ displayName }}</p>
-    <div [ngClass]="{ 'otherPplMessage': senderName != myPeerId, 'myMessage': senderName == myPeerId }" class="card mb-1">
+    <div
+      [ngClass]="{
+        otherPplMessage: senderName != myPeerId,
+        myMessage: senderName == myPeerId
+      }"
+      class="card mb-1"
+    >
       <div class="card-body">
         <p class="card-text">{{ content }}</p>
       </div>
