--- a/rapid-chat-client/src/app/chat/chat.component.html
+++ b/rapid-chat-client/src/app/chat/chat.component.html
@@ -12,24 +12,20 @@
 <div>&nbsp;</div>
 
 <div class="container">
-  <form
-    class="form-container fixed-bottom ml-3 mr-2"
-    [formGroup]="messageForm"
-    (ngSubmit)="sendMessage(messageForm.value)"
-  >
+  <emoji-mart set="messenger" [showPreview]="false" (emojiClick)="addEmoji($event)"></emoji-mart>
+
+  <form class="form-container fixed-bottom ml-3 mr-2"
+        [formGroup]="messageForm"
+        (ngSubmit)="sendMessage(messageForm.value)">
     <div class="form-group d-flex">
-      <input
-        type="text"
-        formControlName="messageToSend"
-        class="form-control"
-        placeholder="Aa"
-        autofocus
-      />
-      <button
-        *ngIf="messageToSend.value != ''"
-        class="invisibleBtn"
-        type="submit"
-      >
+      <input type="text"
+             formControlName="messageToSend"
+             class="form-control"
+             placeholder="Aa"
+             autofocus />
+      <button *ngIf="messageToSend.value != ''"
+              class="invisibleBtn"
+              type="submit">
         <img class="ml-1" src="../../assets/send-mail.svg" />
       </button>
     </div>
